refactor: consolidate environment variable definitions in PR cleanup workflow
fix: update TRAINING_HELM_RELEASE to handle missing pull request number

fix: update PR cleanup workflow to handle optional PR number input

fix: streamline dangling signatures scanning by adjusting input handling

fix: enhance safety checks for array key existence in signature cleanup script

fix: improve safety check for array key existence in dangling signatures scan

fix: refactor dangling signatures scanning to improve safety checks and streamline logic

fix: remove optional PR number input from cleanup workflow and simplify tag generation

fix: refactor dangling signatures scanning for improved clarity and efficiency

fix: update PR cleanup workflow to allow optional PR number input for tag generation

fix: enhance output formatting in dangling signatures scan for better readability

fix: enhance dangling signatures scan with deletion confirmation and improved output formatting

fix: improve output formatting and streamline dangling signatures deletion process

fix: enhance dangling signatures scan to conditionally display missing signature tags

fix: update dangling signatures scan to improve status messages and default behavior

fix: correct syntax error in dangling signatures scan loop

fix: enhance dangling signatures scan with improved output for missing and assigned signature tags

fix: update cleanup_signatures job dependency to require cleanup_registry

fix: rename build job to test for clarity in workflow

fix: rename workflow from PRCleanup to Pull Request Cleanup for clarity

fix: comment out dependency on cleanup_helm in cleanup_registry job

fix: uncomment dependency on cleanup_helm in cleanup_registry job

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,8 +13,8 @@ env:
   DAGGER_CLOUD_TOKEN: ${{ secrets.DAGGER_CLOUD_TOKEN }}
 
 jobs:
-  build:
-    name: build
+  test:
+    name: Dagger-test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
